--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Rock Paper Scissors</h1>
+        <h1>Rock Paper Scissors Made By Pranjul Agarwal</h1>
         <div class="scoreboard">
             <div class="score">
                 <h2>Your Score: <span id="userScore">0</span></h2>
